Backport to 1.19.2: full source adaptation + datapack fixes
- Networking: replace CustomPacketPayload/StreamCodec/PayloadTypeRegistry
  with PacketByteBuf-based ServerPlayNetworking/ClientPlayNetworking
- Registries: BuiltInRegistries → Registry.BLOCK/ITEM/BLOCK_ENTITY_TYPE
- Block: playerWillDestroy void, use vs useWithoutItem, affectNeighborsAfterRemoval
  → onRemove, wasExploded signature, Properties.of(Material.STONE)
- Items: CreativeModeTab.TAB_MISC instead of ItemGroupEvents
- BlockEntity: load/save without HolderLookup.Provider, getUpdateTag() no params
- Command: player.level field (not method), sendSuccess without Supplier
- Datapacks: plural dirs (recipes/, loot_tables/, advancements/, tags/blocks/)
- Recipe: item result field, {item:...} ingredient wrappers, no category field
- Advancement: item icon field, singular item predicates
- Loom: 1.9.2 → 1.17-SNAPSHOT, Java 17